[package]
name = "uu_dmesg"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/dmesg.rs"

[[bin]]
name = "dmesg"
path = "src/main.rs"

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }
serde  = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
nix = { workspace = true }
